change condition checking static_dirs and react_dirs

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,7 +23,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
     # Step 1: Checkout the repository
     - name: Checkout code
       uses: actions/checkout@v3
@@ -42,7 +41,7 @@ jobs:
 
     # Step 3: Build React Apps
     - name: Build React Apps
-      if: env.react_dirs != ""
+      if: env.react_dirs
       run: |
         for dir in $react_dirs; do
           echo "Building React app in $dir"
@@ -55,7 +54,7 @@ jobs:
 
     # Step 4: Prepare Static Directories
     - name: Collect Static Directories
-      if: env.static_dirs != ""
+      if: env.static_dirs
       run: |
         for dir in $static_dirs; do
           echo "Collecting static directory $dir"
