--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,7 +29,7 @@ jobs:
     # Step 2: Build React Apps
     - name: Build React Apps
       run: |
-        mkdir -p final_build
+        mkdir -p final_builds_for_deployment
         echo "Processing React apps in react-sites/"
         for dir in react-sites/*/; do
           if [ -f "$dir/package.json" ]; then
@@ -37,7 +37,7 @@ jobs:
             cd "$dir"
             npm i
             npm run build
-            mv build ../../final_build/$(basename "$dir") # Move the built app
+            mv build ../../final_builds_for_deployment/$(basename "$dir") # Move the built app
             cd -
           else
             echo "No package.json found in $dir, skipping..."
@@ -51,8 +51,8 @@ jobs:
         for dir in static-sites/*/; do
           if [ -f "$dir/index.html" ]; then
             echo "Copying static site from $dir"
-            mkdir -p final_build/$(basename "$dir")
-            cp -r $dir/* final_build/$(basename "$dir") # Copy static site files
+            mkdir -p final_builds_for_deployment/$(basename "$dir")
+            cp -r $dir/* final_builds_for_deployment/$(basename "$dir") # Copy static site files
           else
             echo "No index.html found in $dir, skipping..."
           fi
@@ -63,4 +63,4 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: final_build
+        publish_dir: final_builds_for_deployment
