--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,3 @@
-
 name: Deploy static/react projects to GH Pages
 
 on:
@@ -22,45 +21,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the repository
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    # Step 2: Build React Apps
-    - name: Build React Apps
+    - name: Process and Deploy Folders
       run: |
-        mkdir -p final_builds_for_deployment
-        echo "Processing React apps in react-sites/"
-        for dir in react-sites/*/; do
+        echo "Processing folders in the repository"
+        for dir in */; do
           if [ -f "$dir/package.json" ]; then
             echo "Building React app in $dir"
             cd "$dir"
             npm i
             npm run build
-            mv build ../../final_builds_for_deployment/$(basename "$dir") # Move the built app
+            
             cd -
-          else
-            echo "No package.json found in $dir, skipping..."
           fi
         done
 
-    # Step 3: Copy Static Sites
-    - name: Copy Static Sites
-      run: |
-        echo "Processing static sites in static-sites/"
-        for dir in static-sites/*/; do
-          if [ -f "$dir/index.html" ]; then
-            echo "Copying static site from $dir"
-            mkdir -p final_builds_for_deployment/$(basename "$dir")
-            cp -r $dir/* final_builds_for_deployment/$(basename "$dir") # Copy static site files
-          else
-            echo "No index.html found in $dir, skipping..."
-          fi
-        done
+    - name: Setup Pages
+        uses: actions/configure-pages@v5
 
-    # Step 4: Deploy to GitHub Pages
+    - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.'
+          
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: final_builds_for_deployment
+        id: deployment
+        uses: actions/deploy-pages@v4
