try cp -a instead of mv

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,9 +34,7 @@ jobs:
             npm i
             npm run build
             # Move all files in build folder one level up
-            mv build/* .
-            mv build/static/* ./static # this is a hack since mv doesn't have a -r option
-            rm -rf build
+            cp -a build/* .
             cd -
           fi
         done
