remove debug echo statements. and delete build folder after you're done

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,12 +35,7 @@ jobs:
             npm run build
             # Move all files in build folder one level up
             cp -a build/* .
-            
-            echo "-- contents of /build:"
-            ls -R -l build
-            
-            echo "-- contents of /static:"
-            ls -R -l static
+            rm -rf build
             cd -
           fi
         done
