--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,9 +33,7 @@ jobs:
             cd "$dir"
             npm i
             npm run build
-            # Move all files in build folder one level up
-            mv build/* .
-            # rm -rf build
+            mv build/* . # Move all files in build folder one level up, this way GH pages can deploy it as if it was a static site
             cd -
           fi
         done
