--- a/paint-drying-tracker/package.json
+++ b/paint-drying-tracker/package.json
@@ -2,7 +2,7 @@
   "name": "paint-drying-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://qirh.github.io/random_code/paint-drying-tracker/",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
