--- a/paint-drying-tracker/package.json
+++ b/paint-drying-tracker/package.json
@@ -2,7 +2,7 @@
   "name": "paint-drying-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://qirh.github.io/random_code/paint-drying-tracker/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PUBLIC_URL=/ react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
