--- a/simple_file_system/package.json
+++ b/simple_file_system/package.json
@@ -16,7 +16,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "lint": "eslint . --ext .ts,.tsx --ignore-pattern 'node_modules/*' --ignore-pattern 'build/*' --ignore-pattern 'dist/*'",
+        "lint:fix": "eslint . --ext .ts,.tsx --ignore-pattern 'node_modules/*' --ignore-pattern 'build/*' --ignore-pattern 'dist/*' --fix"
     },
     "eslintConfig": {
         "extends": [
@@ -36,13 +38,14 @@
         ]
     },
     "devDependencies": {
-        "@eslint/js": "^9.17.0",
-        "@typescript-eslint/eslint-plugin": "^8.18.1",
-        "eslint": "^9.17.0",
+        "@eslint/js": "^8.56.0",
+        "@typescript-eslint/eslint-plugin": "^5.62.0",
+        "@typescript-eslint/parser": "^5.62.0",
+        "eslint": "^7.32.0",
         "eslint-config-react-app": "^7.0.1",
-        "eslint-plugin-react": "^7.37.2",
-        "eslint-plugin-react-hooks": "^5.1.0",
-        "globals": "^15.14.0",
-        "typescript-eslint": "^8.18.1"
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "globals": "^13.24.0",
+        "typescript-eslint": "^0.0.1-alpha.0"
     }
 }
